| Summary: | ASTERISK-25258: chan_pjsip: Incorrect format switch on received RTP packet | ||
| Reporter: | Joshua C. Colp (jcolp) | Labels: | |
| Date Opened: | 2015-07-16 09:58:12 | Date Closed: | 2015-07-20 07:33:59 |
| Priority: | Minor | Regression? | No |
| Status: | Closed/Complete | Components: | Channels/chan_pjsip |
| Versions: | 13.4.0 | Frequency of Occurrence | |
| Related Issues: | |||
| Environment: | Attachments: | ||
| Description: | Currently when receiving an RTP packet we switch our formats to the format received. This is done without checking whether the format has actually been allowed or not. In some extreme off-nominal cases this can cause us to use a format which requires a transcoding path. While in this state things can get very upset and spew many errors. | ||
| Comments: | |||